--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -219,6 +219,9 @@ img {
 }
 
 /* Change background header */
+.scroll-header{
+  box-shadow: 0 4px 4px hsla(0, 0%, 4%, .3);
+}
 
 /*=============== HOME ===============*/
 .home__container {
@@ -240,7 +243,7 @@ img {
 .home__greeting {
   display: block;
   color: var(--title-color);
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .home__education {
@@ -260,10 +263,11 @@ img {
   justify-self: center;
   width: 190px;
   height: 293px;
-  background: linear-gradient(180deg,
-              hsla(var(--first-hue), var(--sat), var(--lig), 1),
-              hsla(var(--first-hue), var(--sat), var(--lig), .2)
-              );
+  background: linear-gradient(
+    180deg,
+    hsla(var(--first-hue), var(--sat), var(--lig), 1),
+    hsla(var(--first-hue), var(--sat), var(--lig), 0.2)
+  );
   border-radius: 10rem 10rem 1rem 1rem;
   display: flex;
   align-items: flex-end;
@@ -271,7 +275,7 @@ img {
   overflow: hidden;
 }
 
-.home__buttons{
+.home__buttons {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -279,42 +283,42 @@ img {
 }
 
 .home__social,
-.home__scroll{
+.home__scroll {
   position: absolute;
 }
 
-.home__social{
+.home__social {
   bottom: 5rem;
   left: 0;
   display: grid;
-  row-gap: .5rem;
+  row-gap: 0.5rem;
 }
 
-.home__social-link{
+.home__social-link {
   width: max-content;
   background-color: var(--container-color);
   color: var(--first-color);
-  padding: .25rem;
-  border-radius: .25rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
   display: flex;
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.home__social-link:hover{
+.home__social-link:hover {
   background-color: var(--first-color);
   color: #fff;
 }
 
-.home__social::after{
-  content: '';
+.home__social::after {
+  content: "";
   width: 32px;
   height: 2px;
   background-color: var(--first-color);
   transform: rotate(90deg) translate(16px, 3px);
 }
 
-.home__scroll{
+.home__scroll {
   color: var(--first-color);
   right: -1.5rem;
   bottom: 4rem;
@@ -323,37 +327,83 @@ img {
   justify-items: center;
 }
 
-.home__scroll-icon{
+.home__scroll-icon {
   font-size: 1.25rem;
 }
 
-.home__scroll-name{
+.home__scroll-name {
   font-size: var(--smaller-font-size);
   transform: rotate(-90deg);
 }
 
 /*=============== BUTTONS ===============*/
-.button{
+.button {
   display: inline-block;
   background-color: var(--first-color);
   color: var(--body-color);
-  padding: .75rem 1rem;
-  border-radius: .5rem;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
   font-weight: var(--font-medium);
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.button--ghost{
+.button--ghost {
   background-color: transparent;
   border: 2px solid var(--first-color);
   color: var(--first-color);
 }
 
-.button:hover{
+.button:hover {
   background-color: var(--first-color-alt);
   color: var(--body-color);
 }
+
 /*=============== ABOUT ===============*/
+.about__container {
+  row-gap: 2.5rem;
+}
+
+.about__img {
+  width: 220px;
+  border-radius: 1.5rem;
+  justify-self: center;
+}
+
+.about__data {
+  text-align: center;
+}
+
+.about__info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.about__box {
+  background-color: var(--container-color);
+  border-radius: 0.75rem;
+  padding: 0.75rem 0.5rem;
+}
+
+.about__icon {
+  font-size: 1.5rem;
+  color: var(--first-color);
+  margin-bottom: 0.5rem;
+}
+
+.about__title{
+  font-size: var(--small-font-size);
+}
+
+.about__subtitle{
+  font-size: var(--tiny-font-size);
+}
+
+.about__description{
+  margin-bottom: 2rem;
+}
+
 
 /*=============== SKILLS ===============*/
 
